--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,3 +83,327 @@ border-radius: none;
     font-size: 18px;
     }
 /* fin encabezado inical     */
+
+/*productos */
+* {
+	box-sizing: border-box !important;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	color: #666666;
+	font-size: 14px;
+	font-family: 'poppins', sans-serif;
+	line-height: 1.80857;
+	font-weight: normal;
+	overflow-x: hidden;
+}
+
+a {
+	color: #1f1f1f;
+	text-decoration: none !important;
+	outline: none !important;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+
+
+h2,
+h3 {
+	letter-spacing: 0;
+	font-weight: normal;
+	position: relative;
+	padding: 0 0 10px 0;
+	font-weight: normal;
+	line-height: normal;
+	color: #111111;
+	margin: 0
+}
+
+h2 {
+	font-size: 22px
+}
+
+h3 {
+	font-size: 18px
+}
+
+*,
+*::after,
+*::before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+h2 a,
+h3 a {
+	color: #212121;
+	text-decoration: none!important;
+	opacity: 1
+}
+
+a {
+	color: #222222;
+	text-decoration: none;
+	outline: none !important;
+}
+
+a {
+	text-decoration: none !important;
+	outline: none !important;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+
+.title {
+	text-align:center;
+	padding-bottom: 60px;
+
+}
+
+.title h2 {
+	font-size: 50px;
+	line-height: 55px;
+	color:#ffc221;
+	font-weight: 500;
+	text-transform: uppercase;
+    margin-bottom: 27px;
+    position: relative;
+    padding-bottom: 8px;
+}
+.title h2:after {
+	position: relative;
+content: '';
+top: 100%;
+width: 110px;
+height: 10px;
+display: block;
+margin: 0 auto;
+background: #000;
+}
+
+.title span{
+color:#070500;
+font-size: 28px;
+line-height: 28px;
+margin-top: 20px;
+}
+.black {
+	font-weight: 500;
+	color:#070500;
+}
+
+/** product section **/
+.product {
+	background: #fff;
+	padding-top: 60px;
+
+}
+
+.product .title {
+	text-align:left;
+	padding-bottom: 60px;
+}
+
+.product .title h2 {
+	font-size: 50px;
+	line-height: 55px;
+	color:#ffc221;
+	font-weight: 500;
+	text-transform: uppercase;
+    margin-bottom: 27px;
+    position: relative;
+    padding-bottom: 8px;
+}
+
+.product .title h2:after {
+	position: absolute;
+    border-bottom: #000 solid 10px;
+    content: '';
+    top: 100%;
+    width: 110px;
+}
+
+.product .title span{
+color:#070500;
+font-size: 22px;
+line-height: 28px;
+margin-top: 20px;
+}
+
+.product-bg {
+	background: url(../images/bg.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+.product-bg-white {
+	background: #ffffffbd;
+	box-shadow: #00000040 0px 0px 25px 0px;
+	padding-top: 80px;
+	padding-bottom: 60px;
+}
+ .product-bg .product-bg-white .product-box {
+ 	background: #ddd;
+ 	text-align: center;
+ 	margin-bottom: 30px;
+ 	padding: 20px 25px;
+
+ }
+ .product-bg .product-bg-white .product-box i img {width: 100%;}
+ .product-bg .product-bg-white .product-box:hover {
+ 	background: #fdc24f;
+ }
+
+ .product-bg .product-bg-white .product-box  h3 {
+ 	color: #020000;
+ 	font-weight: 500;
+ 	font-size: 17px;
+ 	line-height: 20px;
+ 	padding-top: 15px;
+ }
+
+ .product-bg .product-bg-white .product-box span {
+ 	color: #020000;
+ 	font-weight: 500;
+ 	font-size: 22px;
+ 	line-height: 22px;
+ }
+.product-bg .product-bg-white .product-box span:hover {
+	color: #fff;
+}
+
+
+
+/*fin productos*/
+
+/*form contacto*/
+
+
+
+.color-cita{
+	background-color:#13c5dd;
+}
+/*fin form contacto*/
+#botoncita{
+	background-color:#13c5dd ;
+	font-weight: 700;
+    transition: .5s;
+}
+#botoncita:hover{
+	background-color:#28a5b6  ;
+	-webkit-box-shadow: 0 8px 6px -6px #555555;
+    -moz-box-shadow: 0 8px 6px -6px #555555;
+    box-shadow: 0 8px 6px -6px #555555;
+}
+
+
+/*fin contacto*/
+
+/*pie de pagina*/
+.footer {
+    background-color: #343636;
+    text-align: center;
+   
+}
+.footer .datos h3 {
+    
+    font-size: 38px;
+   display: block;
+   color: #fff;
+   max-width: 850px;
+   padding-bottom: 1px;
+   border-bottom: #fff solid 1px;
+   text-align: center;
+   margin: 0 auto;
+   margin-bottom: 30px;
+
+}
+.footer .datos span {
+    
+    font-size: 17px;
+    display: block;
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+.footer .datos p {
+    
+    font-size: 17px;
+    display: block;
+    color: #fff;
+    line-height: 30px;
+}
+
+
+
+ul.iconos {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 5px;
+}
+ul.iconos li {
+    float: left;
+    height: 60px;
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-right: 20px;
+}
+ul.iconos li:last-child {
+    padding-right: 0px;
+}
+ul.iconos li a {
+color: #fff;
+width: 40px;
+height: 40px;
+border: solid #fff 1px;
+float: left;
+text-align: center;
+line-height: 40px;
+border-radius: 100%;
+font-size: 18px;
+} 
+
+ul.iconos li a:hover {
+    background: red;
+border: solid #2819ad 1px;        
+color:black;
+}
+
+.copyright {
+    background: #fff;
+    padding: 20px 0px 20px 0;
+    margin-top: 50px;
+}
+.copyright p {
+    color: #000;
+    font-size: 16px;
+    text-align: center;
+    text-align: center;
+    margin: 0 auto;
+}
+.fila {
+    padding-top: 60px;
+}
+
+/*fin pie*/
